--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
     <h1>Sample Page</h1>
-    <p></p>
+    <p>I am adding the P tag back in for my second attempt at finishing this lab. 4.3.2020</p>
 </body>
 </html>
