linked the css file to html file

--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html>
 <head>
     <title>Page Title</title>
+    <link rel="stylesheet" href="style.css"></link>
 </head>
 <body>
     <h1>Sample Page</h1>
-    <p>I am adding the P tag back in for my second attempt at finishing this lab. 4.3.2020</p>
+    <p>I am adding the P tag back in for my second attempt at finishing this lab. 4.3.2020
+        4.4.2020 I added the link section to link to the css file.
+    </p>
 </body>
 </html>
